tests/fixtures/valid/dgps_station_values.gpx
<?xml version="1.0" encoding="UTF-8"?>
<gpx xmlns="http://www.topografix.com/GPX/1/1" version="1.1" creator="Test">
  <wpt lat="52.5200" lon="13.4050">
    <name>Minimum DGPS station ID</name>
    <dgpsid>0</dgpsid>
  </wpt>
  <wpt lat="52.5210" lon="13.4060">
    <name>Middle DGPS station ID</name>
    <dgpsid>512</dgpsid>
  </wpt>
  <wpt lat="52.5220" lon="13.4070">
    <name>Maximum DGPS station ID</name>
    <dgpsid>1023</dgpsid>
  </wpt>
</gpx>
