tests/fixtures/invalid/lon_too_high.gpx
<?xml version="1.0" encoding="UTF-8"?>
<gpx xmlns="http://www.topografix.com/GPX/1/1" version="1.1" creator="Test">
  <wpt lat="52.5200" lon="180.1">
    <name>Longitude too high</name>
  </wpt>
</gpx>
